--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
  # This is the default format.
 # For more see: http://jekyllrb.com/docs/permalinks/
-permalink: /:categories/:year/:month/:day/:title
+permalink: /:categories/:year-:month-:day/:title
 
+markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: pygments
+highlighter_style: monokai
 
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
