--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ highlighter_style: monokai
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
+# safe: false
 title : Flannel Jesus
 tagline: Site Tagline
 author :
