made fixes to code styling, commented out but enabled pagination

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: pygments
 highlighter_style: monokai
 
+paginate: 4
+paginate_path: "/page:num"
+
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
